<resources>
    <string name="app_name">Compass</string>

    <!--    <string name="pub_banner" translatable="false">ca-app-pub-3294765052683520/7288163607</string>-->
    <!--    Test-->
    <string name="pub_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <!--    <string name="pub_reward" translatable="false">ca-app-pub-3294765052683520/3503482463</string>-->
    <!--    Test-->
    <string name="pub_reward" translatable="false">ca-app-pub-3940256099942544/5224354917</string>

    <string name="morning_greeting">Good morning!</string>
    <string name="afternoon_greeting">Good afternoon!</string>
    <string name="night_greeting">Good evening!</string>
    <string name="location_reason">this is message location</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="standard_greeting">Hello !</string>
    <string name="allow_location_permission">Allowing access to your location only help to improve application features.</string>
    <string name="location_permission_allowed">If you want to disable location permission for this application, access to your application settings and disable it.</string>
    <string name="credit" translatable="false">© 2020 KioF</string>
    <string name="location_dialog_title">Allow access your location ?</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don\'t allow</string>
    <string name="location_on_title">Location is provided !</string>

    <string name="Ok">OK</string>
    <string name="quit_title">Quit ?</string>
    <string name="quit_message">Do you want to leave this application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="goingon">The application goes on</string>

    <string name="about_title">About</string>

    <string name="share_with">Share with…</string>
    <string name="share_title">A friend recommend you…</string>
    <string name="share_link" translatable="false">http://market.android.com/details?id=com.kiof.timer</string>
    <string name="other_link" translatable="false">market://search?q=pub:Kiof</string>

    <string name="menuTitle0">Location permission</string>
    <string name="menuTitleCondensed0">Location</string>
    <string name="menuTitle1">Options</string>
    <string name="menuTitleCondensed1">Options</string>
    <string name="menuTitle2">Remove Ads for 24h</string>
    <string name="menuTitleCondensed2">Remove Ads</string>
    <string name="menuTitle3">Send to a friend</string>
    <string name="menuTitleCondensed3">Share</string>
    <string name="menuTitle4">More free applications</string>
    <string name="menuTitleCondensed4">More apps</string>
    <string name="menuTitle5">About…</string>
    <string name="menuTitleCondensed5">About</string>
    <string name="menuTitle6">Quit</string>
    <string name="menuTitleCondensed6">Quit</string>

    <string name="RewardMessage">No more Ad for 24h :-)</string>
    <string name="location_request">Location request</string>

    <string name="preference_category_features">Features</string>
    <string name="sound_title">Sound</string>
    <string name="sound_summary">Play sounds of the application</string>
    <string name="save_setting">Save settings</string>
    <string name="setting_saved">Settings saved</string>
    <string name="title">Compass</string>
    <string name="changelog_title">About</string>
    <string name="fab_noads"><![CDATA[<- No ads for 24h]]></string>
    <string name="AdsNotLoaded">The rewarded ad wasn\'t loaded yet.</string>

</resources>
